--- a/style.css
+++ b/style.css
@@ -52,18 +52,19 @@
         --box-shadow: 0px 5px 20px 0px rgba(69, 67, 96, 0.1);
     }
     /*========== Responsive Typography ==========*/
-    @media screen and (max-width: 992px)
+   @media screen and (max-width:992px) 
+   {
+    :root
     {
-        :root 
-        {
-            --h1-font-size: 1.75rem;
-            --h2-font-size: 1.5rem;
-            --h3-font-size: 1rem;
-            --normal-font-size: 938rem;
-            --small-font-size: .813rem;
-        }
+        --h1-font-size: 1.75rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1rem;
+        --normal-font-size: .938rem;
+        --small-font-size: .813rem;
     }
+   }
 
+     
     /*========== Base ==========*/
     * {
         margin: 0;
@@ -792,4 +793,130 @@
         height: 1.4rem;
         border: 2px solid var(--color-gray);
         border-radius: 50%;
+    }
+
+    /*========== Media Queries ==========*/
+    @media only screen and (max-width:1200px) {
+        .customize-theme .card
+        {
+            width: 50vw;
+        }
+    }
+
+    @media only screen and (max-width:968px) {
+        .about-content,
+        .about-img
+        {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+        .about-img
+        {
+            text-align: center;
+            margin-bottom: var(--m-2-5);
+        }
+        .customize-theme .card
+        {
+            width: 58vw;
+        }
+    }
+    @media only screen  and (max-width:768px) {
+        body
+        {
+            margin: var(--header-height) 0 0 0;
+        }
+        .container
+        {
+            max-width: 568px;
+        }
+        .nav
+        {
+            height: var(--header-height);
+        }
+        .nav-list{
+            flex-direction: column;
+            row-gap: 1.5rem;
+        }
+        .nav-menu
+        {
+            position: fixed;
+            background: var(--color-white);
+            width: 80%;
+            height: 100%;
+            top:0;
+            right: -100%;
+            padding: 4rem 0 0 3rem;
+            border-radius: 1rem 0 0 1rem;
+            z-index: 100;
+            transition: .3s;
+        }
+        .show-menu
+        {
+            right: 0;
+        }
+        .nav-close,
+        .nav-toggle
+        {
+            display: inline-flex;
+        }
+        .education,
+        .experience,
+        .about-content .about-text,
+        .about-content .skills
+        {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+        .fact-item, 
+        .blog-item
+        {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+        .about-content .about-text
+        {
+            margin-bottom: var(--m-1-5)
+        }
+        .blog-item,
+        .education
+        {
+            margin-bottom: var(--m-2-5);
+        }
+        .customize-theme .card
+        {
+            width: 75vw;
+        }
+        
+    }
+    @media only screen and (max-width:576px) {
+        .blog-item
+        {
+            flex:0 0 100%;
+            max-width: 100%; 
+        }
+        .blog-item .inner
+        {
+            max-width: 380px;
+            margin: 0 auto;
+        }
+        .timeline
+        {
+            padding: 25px 20px;
+        }
+        .timeline .timeline-item{
+            padding: 25px 20px;
+        } 
+        .customize-theme .card
+        {
+            width: 96vw;
+            padding: 1 rem;
+        }
+    }
+
+    @media only screen and (max-width:320px) {
+        .fact-item
+        {
+            flex: 0 0 100%;
+            max-width:  100%;
+        }
     }
